<resources>
    <string name="app_name" translatable="false">MeuFrete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_item_favPlaces">Locais Favoritos</string>
    <string name="menu_item_lastTrips">Últimas Viagens</string>
    <string name="menu_item_exit">Sair</string>
    <string name="menu_item_newTrip">Nova Viagem</string>
    <string name="hint_alias">Apelido</string>
    <string name="hint_address">Endereço</string>
    <string name="btn_save">Salvar</string>
    <string name="floatbtn_favPlace">Novo Local Favorito</string>
    <string name="deletebtn">Deletar</string>
    <string name="input_oriAddress">Endereço de Origem</string>
    <string name="input_desAddress">Endereço de Destino</string>
    <string name="permissionImg">"Imagem de Solicitação de Permissão "</string>
    <string name="permissionReq">Você está aqui !</string>
    <string name="permissionReqDesc">Permitir que sua localização seja compartilhada conosco.</string>
    <string name="btn_perm">Permitir</string>
    <string name="logo">logo</string>
    <string name="menu_icon" translatable="false">Menu</string>
    <string name="btn_edit">Editar</string>
    <string name="staricon_hint">Icone de Favorito</string>
    <string name="trip_details">Detalhes da Viagem</string>
    <string name="summary">Resumo</string>
    <string name="input_vehicle">Selecione o Veículo</string>
    <string name="tripDetail_description">Descrição da Carga</string>
    <string name="options">Opções</string>
    <string name="check_trip_twice">Ida e Volta</string>
    <string name="check_empty_return">Retorno Vazio</string>
    <string name="check_load_n_unload">Serviço de carga e descarga</string>
    <string name="calculate_btn">Calcular</string>
    <string name="current_place">Local Atual</string>
    <string name="api_progress_bar">Carregandos dados da API</string>
    <string name="yes">Sim</string>
    <string name="confirmDelete">Confirmar Exclusão de Registro ?</string>
</resources>