<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PermissionRequest"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp"
        >
        <Space
            android:layout_width="match_parent"
            android:layout_height="180dp" />

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_location_icon"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/permissionImg" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/permissionReq"
            android:gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/permissionReqDesc"
            android:textColor="@color/black"
            android:textSize="14sp"
        />

    </LinearLayout>

    <Button
        android:id="@+id/requestPermButton"
        android:textAlignment="center"
        app:cornerRadius="100dp"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_perm"
        app:backgroundTint="@color/blueapp"
        android:textColor="@color/white"
        app:elevation="4dp"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>