<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blueapp"
    tools:context=".Splash">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="148dp">

        <ImageView
            android:layout_width="212dp"
            android:layout_height="212dp"
            android:layout_gravity="center"
            android:layout_marginRight="12dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginTop="-48dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="36sp" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="bottom|center"
        app:trackColor="@color/white"
        app:indicatorColor="@color/blueapp"
        app:trackCornerRadius="6dp"
        app:trackThickness="2dp"
        android:contentDescription="@string/api_progress_bar"
        android:indeterminate="true"
        />

</FrameLayout>