<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterFavPlaces"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_item_favPlaces"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/blueapp"
            android:padding="12dp"
            />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/favPlace_alias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_alias"
            android:textColorHint="@color/blueapp"
            app:hintTextColor="@color/blueapp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blueapp"
            android:paddingHorizontal="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <Space
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/favPlace_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_address"
            android:textColorHint="@color/blueapp"
            app:hintTextColor="@color/blueapp"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blueapp"
            android:paddingHorizontal="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/black"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/saveFavPlace"
        android:textAlignment="center"
        app:cornerRadius="100dp"
        android:layout_width="210dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        app:backgroundTint="@color/blueapp"
        android:textColor="@color/white"
        app:elevation="4dp"
        android:layout_marginBottom="14dp"
        android:layout_gravity="bottom|center"
        tools:ignore="MissingConstraints" />

</FrameLayout>