<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TripDetail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:padding="12dp"
            android:text="@string/trip_details"
            android:textAlignment="center"
            android:textColor="@color/blueapp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="14dp"
            android:layout_marginVertical="0dp"
            app:cardBackgroundColor="@color/blueapp"
            app:cardCornerRadius="6dp"
            app:cardElevation="8dp"
            app:cardMaxElevation="10dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:minHeight="112dp"
                android:padding="12dp">

                <TextView
                    android:id="@+id/tripDetailCard_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText"
                />

                <TextView
                    android:id="@+id/tripDetailDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tripDetailCard_title"
                    android:layout_alignParentBottom="true"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    android:text="26"
                    android:textColor="@color/white"
                    android:gravity="bottom"
                />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tripDetailDistance"
                    android:layout_alignBaseline="@id/tripDetailDistance"
                    android:text="Km"
                    android:paddingHorizontal="2dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@id/tripDetailValue"
                    android:layout_alignBaseline="@id/tripDetailDistance"
                    android:text="R$"
                    android:paddingHorizontal="6dp"
                    android:textColor="@color/white"
                    android:textSize="26sp"
                    android:textStyle="bold"
                />
                <TextView
                    android:id="@+id/tripDetailValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="26sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="480,69"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBaseline="@id/tripDetailDistance"
                />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/favPlace_alias2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColorHint="@color/blueapp"
            app:boxBackgroundColor="@color/tranparent"
            app:boxStrokeColor="@color/blueapp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:paddingHorizontal="24dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompletePlaceOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_oriAddress"
                android:inputType="text"
                android:padding="8dp"
                style="@style/default_colors"
                android:textColorHint="@color/blueapp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/favPlace_name2"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColorHint="@color/blueapp"
            app:boxBackgroundColor="@color/tranparent"
            app:boxStrokeColor="@color/blueapp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:paddingHorizontal="24dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompletePlaceDestination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_desAddress"
                android:inputType="text"
                android:padding="8dp"
                style="@style/default_colors"
                android:textColorHint="@color/blueapp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/vehicles"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:textColorHint="@color/blueapp"
            app:boxBackgroundColor="@color/tranparent"
            app:boxStrokeColor="@color/blueapp"
            app:hintEnabled="false"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
            android:paddingHorizontal="24dp">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteVehicles"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/input_vehicle"
                android:inputType="text"
                android:padding="8dp"
                style="@style/default_colors"
                android:textColorHint="@color/blueapp"
                tools:ignore="TouchTargetSizeCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tripDetail_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/tripDetail_description"
            android:textColorHint="@color/blueapp"
            app:hintTextColor="@color/blueapp"
            app:boxBackgroundColor="@color/tranparent"
            app:boxStrokeColor="@color/blueapp"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:paddingHorizontal="24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/default_colors"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="24dp"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/options"
            android:textColor="@color/blueapp"
            android:textSize="16sp"
            android:layout_marginHorizontal="30dp"
        />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:cardBackgroundColor="@color/tranparent"
            app:cardCornerRadius="4dp"
            app:cardMaxElevation="0dp"
            app:strokeWidth="1dp"
            app:strokeColor="@color/blueapp2"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="8dp">

                <CheckBox
                    android:id="@+id/checkTripTwice"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:buttonTint="@color/blueapp2"
                    style="@style/default_colors"
                    android:text="@string/check_trip_twice" />

                <CheckBox
                    android:id="@+id/checkEmptyReturn"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:buttonTint="@color/blueapp2"
                    style="@style/default_colors"
                    android:text="@string/check_empty_return" />

                <CheckBox
                    android:id="@+id/checkLoadNUnload"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:checked="true"
                    android:buttonTint="@color/blueapp2"
                    style="@style/default_colors"
                    android:text="@string/check_load_n_unload" />



            </androidx.appcompat.widget.LinearLayoutCompat>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <Button
        android:id="@+id/calculateBtn"
        android:textAlignment="center"
        app:cornerRadius="100dp"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:text="@string/calculate_btn"
        app:backgroundTint="@color/blueapp"
        android:textColor="@color/white"
        app:elevation="4dp"
        android:layout_marginBottom="14dp"
        android:layout_gravity="bottom|center"
        />


    <TextView
        android:id="@+id/testid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         />

        <TextView
        android:id="@+id/testid2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
         />


</FrameLayout>